--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/tamago-boro/web-page",
+  "homepage": "https://tamago-boro.github.io/web-page",
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
